// Vitest Snapshot v1

exports[`<Header/> > should render authenticated header 1`] = `
<div>
  <div>
    <nav
      class="_wrap_140w3_132"
    >
      <div
        class="_rightNav_140w3_155"
      >
        <div>
          Ponti UI
        </div>
      </div>
      <div
        class="_leftNav_140w3_154"
      >
        <div>
          Account
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`<Header/> > should render unauthenticated header 1`] = `
<div>
  <div>
    <nav
      class="_wrap_140w3_132"
    >
      <div
        class="_rightNav_140w3_155"
      >
        <div>
          Ponti UI
        </div>
      </div>
      <div
        class="_leftNav_140w3_154"
      >
        <button
          class="_wrap_gkvrq_132 _text_gkvrq_158"
          data-testid="loginButton"
          type="button"
        >
          Get Started
        </button>
      </div>
    </nav>
  </div>
</div>
`;
